tests/src/frontend/syntax/invalid/algebraic_macro.sk
base class B {
  children =
  | C()
  | D()

  macro fun m(): void
  | C() -> void
  | D() -> void
}

fun main(): void {
  print_string("FAIL");
}
